--- a/client/app/account/login/login.css
+++ b/client/app/account/login/login.css
@@ -1,5 +1,5 @@
 body{
-  font-family: "ProximaNova";
+  font-family: "ProximaNova", sans-serif;
   color: #333333;
   font-size: 14px;
   /* background-color: #e8e8e8; */
@@ -107,7 +107,7 @@ label + label {
 }
 .link {
   color: #f7953d;
-  font-family: "Proxima Nova";
+  font-family: "Proxima Nova", sans-serif;
 }
 .link:hover {
   color: #f7953d;
@@ -138,7 +138,7 @@ label + label {
   border: none;
   border-bottom: solid 2px #e4e4e4;
   padding: 10px 0;
-  font-family: "Proxima Nova";
+  font-family: "Proxima Nova", sans-serif;
 }
 .main-form .lbl input:focus {
   border-color: #f7953d;
@@ -170,7 +170,7 @@ label + label {
   height: 40px;
   line-height: 40px;
   border-radius: 25px;
-  font-family: "Proxima Nova";
+  font-family: "Proxima Nova", sans-serif;
   display: inline-block;
   border: none;
   color: #fff;
@@ -193,7 +193,7 @@ label + label {
   text-transform: uppercase;
   height: 50px;
   line-height: 50px;
-  font-family: "Proxima Nova";
+  font-family: "Proxima Nova", sans-serif;
 }
 
 .small-btn {
@@ -282,7 +282,7 @@ label + label {
   display: inline-block;
   padding-left: 31px;
   color: #e4e4e4;
-  font-family: "Proxima Nova";
+  font-family: "Proxima Nova", sans-serif;
 }
 .login-box .social .link span:hover {
   color: #f7953d;
