Room and Looking add/edit changes. Added required fields asterisk and made 2 fields optional.

--- a/client/app/app.css
+++ b/client/app/app.css
@@ -854,6 +854,10 @@ For mailchimp sign-up - not needed in main app
   letter-spacing: -1px;
 }
 
+.asterisk {
+  color: red;
+}
+
 
 /* RESPONSIVE CSS
 -------------------------------------------------- */
