--- a/client/components/layout/navbar/navbar.css
+++ b/client/components/layout/navbar/navbar.css
@@ -44,3 +44,12 @@ header.picture{
 .fb-like{
   bottom: 3px;
 }
+
+#settings {
+  cursor:pointer;
+  color: #ffffff;
+  font-size: 25px;
+  padding-left: 5px;
+  padding-right: 5px;
+  vertical-align: middle;
+}
