--- a/client/app/app.css
+++ b/client/app/app.css
@@ -968,6 +968,25 @@ and (max-device-width : 480px) {
 
 @media (max-width: 768px) {
 
+  .flipper {
+    /*disabling all css rotation effect for smart phones*/
+    -o-transition-property: none !important;
+    -moz-transition-property: none !important;
+    -ms-transition-property: none !important;
+    -webkit-transition-property: none !important;
+    transition-property: none !important;
+    -o-transform: none !important;
+    -moz-transform: none !important;
+    -ms-transform: none !important;
+    -webkit-transform: none !important;
+    transform: none !important;
+    -webkit-animation: none !important;
+    -moz-animation: none !important;
+    -o-animation: none !important;
+    -ms-animation: none !important;
+    animation: none !important;
+  }
+
   .jumbotron {
     margin-top: -160px;
     padding-top: 120px;
