--- a/client/components/widgets/my-spinner/my.spinner.html
+++ b/client/components/widgets/my-spinner/my.spinner.html
@@ -1,7 +1,7 @@
 <section class="login-box white-box" style="height: 120px">
   <div class="col-xs-2 col-sm-2">
     <div class="post-bubble">
-      <i class="fa fa-spinner fa-spin fa-lg"></i>
+      <i class="fa fa-spinner fa-pulse fa-lg"></i>
     </div>
   </div>
   <div class="col-xs-10 col-sm-10">
