--- a/server/components/mail/user_update/html.ejs
+++ b/server/components/mail/user_update/html.ejs
@@ -181,7 +181,7 @@
                       <tr>
                         <td align="center">
                           <center>
-                            <p style="text-align:center;"><a href="https://campusly.org/unsubscribe/*|EMAIL|*">Unsubscribe</a> | <a href="https://campusly.org/terms">Terms</a> | <a href="https://campusly.org/privacy">Privacy</a></p>
+                            <p style="text-align:center;"><a href="{{=UNSUBSCRIBE_URL}}*|TOKEN|*">Unsubscribe</a> | <a href="https://campusly.org/terms">Terms</a> | <a href="https://campusly.org/privacy">Privacy</a></p>
                           </center>
                         </td>
                         <td class="expander"></td>
