Around you status changes, removing email target=top tag, clarified user that they need to login to view listings.

--- a/server/components/mail/user_update/html.ejs
+++ b/server/components/mail/user_update/html.ejs
@@ -44,7 +44,7 @@
                     <br>
                     <h5>Connect with {{=(lookings.length+roomListings.length)}} new students who are looking for a room or roommate!</h5>
                     <br/>
-                    <h5>New posts from {{=d.getMonth()+1}}/{{=d.getDate()}}/{{=d.getFullYear()}}<br></h5>
+                    <h5>Login and view new posts from {{=d.getMonth()+1}}/{{=d.getDate()}}/{{=d.getFullYear()}}<br><br></h5>
 
                     <!--begin looking section-->
                     {{ if (lookings.length > 0) { }}
