--- a/client/app/app.css
+++ b/client/app/app.css
@@ -1106,6 +1106,10 @@ and (max-device-width : 480px) {
     margin-top: 30px;
   }
 
+  .topRow{
+    padding-top: 15px;
+  }
+
 }
 
 /* ==========================================================================
@@ -1341,6 +1345,10 @@ Media query
 
 @media (max-width: 992px) {
 
+  .topRow {
+    padding-top: 15px;
+  }
+
 }
 
 @media (max-width: 768px) {
@@ -1537,6 +1545,10 @@ Bubble for all posts
 /* ==========================================================================
 Post padding
 ========================================================================== */
+
+.topRow {
+
+}
 
 .post-padding {
   padding-top: 15px;
