Hide the previous, next button for now. Changes to grids to show/hide if there is no university added

--- a/client/app/app.css
+++ b/client/app/app.css
@@ -1434,7 +1434,7 @@ Media query
 }
 
 .white-box.looking-for-room {
-  padding-top: 40px;
+  padding-top: 20px;
 }
 
 .white-box .property-pictures {
@@ -3149,6 +3149,7 @@ Unsubscribe partial styling
 
 .interested-box-search {
   overflow: hidden;
+  margin-top: 20px;
 }
 
 .interested-box-search div {
