--- a/client/app/app.css
+++ b/client/app/app.css
@@ -1205,15 +1205,15 @@ div.main-wrapper {
   background: #e8e8e8;
   display: block;
   width: 100%;
-  min-height: 500px;
+  min-height: 1000px;
 }
 
 /* Dashboard Submenu */
 
 nav.dashboard-submenu {
   background-color: #ffffff;
-  padding:0px;
-  margin:0px;
+  padding:0;
+  margin:0;
   list-style:none;
 
 }
@@ -3178,4 +3178,96 @@ Unsubscribe partial styling
 .not-interested {
   opacity: .4;
   color: #000000;
+}
+
+/*
+***********************
+* =loader
+***********************
+*/
+
+.loader {
+  position: relative;
+  height: 200px;
+  width: 300px;
+}
+
+.loader h3{
+  padding-top: 50px;
+  right: 10px;
+  position: absolute;
+  left: -70px;
+}
+
+.img1 {
+  position: absolute;
+  margin:auto;
+}
+
+.img2 {
+  position: absolute;
+  -webkit-animation: spin1 1s infinite;
+  -moz-animation: spin1 1s infinite;
+  -o-animation: spin1 1s infinite;
+  animation: spin1 1s infinite;
+  bottom: 12px;
+  left: 6px;
+}
+
+#loadingWidget {
+  position: fixed;
+  z-index: 999;
+  height: 2em;
+  width: 2em;
+  overflow: show;
+  margin: auto;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+}
+
+#loadingWidget:before {
+  content: '';
+  display: block;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: -webkit-radial-gradient(circle, #e0cbcb, #937272, #685252); /* For Safari 5.1 to 6.0 */
+  background: -o-radial-gradient(circle, #e0cbcb, #937272, #685252); /* For Opera 11.6 to 12.0 */
+  background: -moz-radial-gradient(circle, #e0cbcb, #937272, #685252); /* For Fx 3.6 to 15 */
+  background: radial-gradient(circle, #e0cbcb, #937272, #685252); /* Standard syntax (must be last) */
+  opacity: 0.7;
+}
+
+@-webkit-keyframes spin1 {
+  100% {
+    -webkit-transform: rotate(360deg);
+  }
+}
+
+@-moz-keyframes spin1 {
+  100% {
+    -moz-transform: rotate(360deg);
+  }
+}
+
+@-o-keyframes spin1 {
+  100% {
+    -o-transform: rotate(360deg);
+  }
+}
+
+@-ms-keyframes spin1 {
+  100% {
+    -ms-transform: rotate(360deg);
+  }
+}
+
+@keyframes spin1 {
+  100% {
+    transform: rotate(360deg);
+  }
 }
