--- a/client/app/account/login/login.css
+++ b/client/app/account/login/login.css
@@ -267,6 +267,14 @@ label + label {
   margin: 50px auto 0px auto;
   padding: 30px 50px !important;
 }
+
+.landing-signUp-box {
+  max-width: 550px;
+  width: 100%;
+  margin: 140px auto 0px auto;
+  padding: 0px 50px 30px !important;
+}
+
 .login-box .social {
   margin-top: 30px;
   display: table;
