--- a/client/app/app.css
+++ b/client/app/app.css
@@ -140,10 +140,10 @@ img.center {
 Main image and style for above the fold on the home-page
 ========================================================================== */
 .jumbotron {
-  background: url(../assets/images/jumbotron/bg-ucsdC.jpg);
+  background: url(../assets/images/jumbotron/students.jpg);
   background-repeat: no-repeat;
   background-size: cover;
-  max-height: 590px;
+  height: 800px;
   margin-top: -70px;
 }
 
@@ -556,7 +556,7 @@ Large Rented button
   text-transform: uppercase;
   border-radius: 25px;
   font-weight: bold;
-  width: 280px;
+  width: 100%;
   height: 50px;
   text-align: center;
   margin: 0 auto;
