--- a/client/components/layout/navbar/navbar.css
+++ b/client/components/layout/navbar/navbar.css
@@ -29,14 +29,14 @@ header.picture{
   background-image: url(./../../../assets/images/jumbotron/nav.jpg);
 }
 .facebookNavbar {
-  color: #3b5998;
+  color: white;
   font-size: 0.8em;
   font-weight: bold;
   cursor: pointer;
 }
 
 .facebookNavbarIcon {
-  color: #3b5998;
+  color: white;
   font-size: 1.6em;
   cursor: pointer;
 }
