New landing page. Optimized for mobile

--- a/client/app/account/login/login.css
+++ b/client/app/account/login/login.css
@@ -255,7 +255,10 @@ label + label {
   /*background: linear-gradient(to bottom,  #55a5b2 0%,#119bad 100%);*/
   /*filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#55a5b2', endColorstr='#119bad',GradientType=0 );*/
 
-  background-image: url(./../../../assets/images/jumbotron/nav.jpg);
+  background-image:linear-gradient(
+    rgba(0, 0, 0, 0.35),
+    rgba(0, 0, 0, 0.35)
+  ), url(./../../../assets/images/jumbotron/nav.jpg);
 
   background-position: center;
   background-size: cover;
@@ -345,6 +348,51 @@ label + label {
 
 .jumbotron .text-box-landing h1 {
   font-size: 3.4em;
+}
+
+.value-landing {
+  margin-top: 20%;
+  border-radius: 5px;
+  padding: 20px;
+  position: relative;
+  float: left;
+  width: 50%;
+  text-align: center;
+  color: #333333;
+}
+
+.value-landing-desktop {
+  padding: 20px;
+  position: relative;
+  float: right;
+  width: 50%;
+  height: 800px;
+}
+
+.value-landing-desktop img {
+  height: 800px;
+}
+
+.value-landing-housing {
+  margin-top: 3%;
+  border-radius: 5px;
+  padding: 20px;
+  position: relative;
+  width: 100%;
+  text-align: center;
+  margin-left: 3%;
+  color: #333333;
+}
+
+.value-landing-laptop {
+  padding: 20px;
+  position: relative;
+  text-align: center;
+  width: 100%;
+}
+
+.value-landing-laptop img {
+  height: 700px;
 }
 
 .login-box .social {
@@ -438,6 +486,39 @@ and (max-device-width : 480px) {
     font-size: 2em;
   }
 
+  .value-landing {
+    float: none;
+    width: 100%;
+    margin-top: 0px;
+    text-align: center;
+  }
+
+  .value-landing-desktop {
+    float: none;
+    width: 100%;
+    margin-top: 0px;
+    margin-bottom: -300px;
+  }
+
+  .value-landing-desktop img {
+    height: 30%;
+  }
+
+  .value-landing-housing {
+    margin-left: 0px;
+  }
+
+  .value-landing-laptop {
+    padding: 20px;
+    position: relative;
+    text-align: center;
+    width: 100%;
+  }
+
+  .value-landing-laptop img {
+    height: 160px;
+  }
+
 }
 
 /* iPhone 5/5S
@@ -460,6 +541,40 @@ and (max-device-width : 568px) {
     font-size: 2em;
   }
 
+  .value-landing {
+    float: none;
+    width: 100%;
+    margin-top: 0px;
+    text-align: center;
+  }
+
+  .value-landing-desktop {
+    float: none;
+    width: 100%;
+    margin-top: 0px;
+    margin-bottom: -400px;
+    text-align: center;
+  }
+
+  .value-landing-desktop img {
+    height: 30%;
+  }
+
+  .value-landing-housing {
+    margin-left: 0px;
+  }
+
+  .value-landing-laptop {
+    padding: 20px;
+    position: relative;
+    text-align: center;
+    width: 100%;
+  }
+
+  .value-landing-laptop img {
+    height: 160px;
+  }
+
 }
 
 /* iPhone 6
@@ -471,6 +586,7 @@ and (max-device-width : 667px) {
   .white-box-signup {
     margin-top: 250px;
     float: none;
+    width: 100%;
   }
 
   .jumbotron .text-box-landing {
@@ -480,6 +596,40 @@ and (max-device-width : 667px) {
 
   .jumbotron .text-box-landing h1 {
     font-size: 2.2em;
+  }
+
+  .value-landing {
+    float: none;
+    width: 100%;
+    margin-top: 0px;
+    text-align: center;
+  }
+
+  .value-landing-desktop {
+    float: none;
+    width: 100%;
+    margin-top: 0px;
+    margin-bottom: -400px;
+    text-align: center;
+  }
+
+  .value-landing-desktop img {
+    height: 30%;
+  }
+
+  .value-landing-housing {
+    margin-left: 0px;
+  }
+
+  .value-landing-laptop {
+    padding: 20px;
+    position: relative;
+    text-align: center;
+    width: 100%;
+  }
+
+  .value-landing-laptop img {
+    height: 185px;
   }
 
 }
@@ -493,6 +643,7 @@ and (max-device-width : 736px) {
   .white-box-signup {
     margin-top: 250px;
     float: none;
+    width: 100%;
   }
 
   .jumbotron .text-box-landing {
@@ -504,14 +655,47 @@ and (max-device-width : 736px) {
     font-size: 2.2em;
   }
 
+  .value-landing {
+    float: none;
+    width: 100%;
+    margin-top: 0px;
+    text-align: center;
+  }
+
+  .value-landing-desktop {
+    float: none;
+    width: 100%;
+    margin-top: 0px;
+    margin-bottom: -400px;
+    text-align: center;
+  }
+
+  .value-landing-desktop img {
+    height: 40%;
+  }
+
+  .value-landing-housing {
+    margin-left: 0px;
+  }
+
+  .value-landing-laptop {
+    padding: 20px;
+    position: relative;
+    text-align: center;
+    width: 100%;
+  }
+
+  .value-landing-laptop img {
+    height: 207px;
+  }
+
 }
 
 /* iPad and iPad-Mini (all gen)
 -------------------------------------------------- */
 @media only screen
 and (min-device-width : 768px)
-and (max-device-width : 1024px)
-and (orientation : portrait) {
+and (max-device-width : 1024px) {
 
   .white-box-signup {
     margin-top: 150px;
@@ -524,6 +708,46 @@ and (orientation : portrait) {
 
   .jumbotron .text-box-landing h1 {
     font-size: 2.5em;
+  }
+
+  .value-landing {
+    margin-top: 20%;
+    text-align: center;
+  }
+
+  .value-landing-desktop {
+    margin-top: 0px;
+    margin-bottom: -400px;
+    text-align: center;
+  }
+
+  .value-landing-desktop img {
+    height: 70%;
+  }
+
+  .value-landing-housing {
+    margin-left: 0px;
+  }
+
+  .value-landing-laptop {
+    padding: 20px;
+    position: relative;
+    text-align: center;
+    width: 100%;
+  }
+
+  .value-landing-laptop img {
+    height: 384px;
+  }
+
+}
+
+/* Large desktop monitors
+-------------------------------------------------- */
+@media (min-device-width: 1500px) {
+
+  .value-landing-desktop {
+    margin-right: -10%;
   }
 
 }
