--- a/client/components/layout/footer/privacy.html
+++ b/client/components/layout/footer/privacy.html
@@ -2,10 +2,10 @@
   <div class="container">
     <div class="left-content">
       <a href="/" ng-if="!isLoggedIn()">
-        <img src="../../../assets/images/webname.svg" alt="campusly" >
+        <img src="../../../assets/images/webname.png" alt="campusly" >
       </a>
       <a ui-sref="dashboard" ng-if="isLoggedIn()">
-        <img src="../../../assets/images/webname.svg" alt="campusly" >
+        <img src="../../../assets/images/webname.png" alt="campusly" >
       </a>
     </div>
 
