--- a/client/components/layout/navbar/navbar.html
+++ b/client/components/layout/navbar/navbar.html
@@ -2,10 +2,10 @@
   <div class="container">
     <div class="left-content">
       <a href="/" ng-if="!isLoggedIn()">
-        <img src="../../../assets/images/webname.svg" alt="campusly" height="40px">
+        <img src="../../../assets/images/webname.png" alt="campusly" height="40px">
       </a>
       <a ui-sref="dashboard" ng-if="isLoggedIn()">
-        <img src="../../../assets/images/webname.svg" alt="campusly" height="40px">
+        <img src="../../../assets/images/webname.png" alt="campusly" height="40px">
       </a>
     </div>
     <div class="right-content">
