--- a/client/app/app.css
+++ b/client/app/app.css
@@ -1455,6 +1455,14 @@ Media query
   position: relative;
 }
 
+.white-box-noshadow {
+  border-radius: 5px;
+  padding: 20px;
+  background: #fff;
+  box-shadow: none;
+  position: relative;
+}
+
 .white-box + .white-box{
   margin-top: 10px;
   margin-bottom: 20px;
