Changed spinner to no box shadow

--- a/client/components/widgets/my-spinner/my.spinner.html
+++ b/client/components/widgets/my-spinner/my.spinner.html
@@ -1,4 +1,4 @@
-<section class="login-box white-box" style="height: 120px">
+<section class="login-box white-box-noshadow" style="height: 120px">
   <div class="col-xs-2 col-sm-2">
     <div class="post-bubble">
       <i class="fa fa-spinner fa-pulse fa-lg"></i>
