Dashboard changes for My Posts

--- a/client/app/app.css
+++ b/client/app/app.css
@@ -1937,7 +1937,7 @@ Looking Details
 
 .my-listings .list-item .info .value{
   font-size: 1.3em;
-  width: 100px;
+  width: 90%;
   padding-bottom: 3px;
   border-bottom: 2px solid #f7953d;
   margin-bottom: 5px;
