--- a/client/app/app.css
+++ b/client/app/app.css
@@ -1919,7 +1919,6 @@ Looking Details
 .my-listings .list-item .picture{
   border-radius: 3px;
   width: 100%;
-  height: 80px;
   overflow: hidden;
 }
 .my-listings .list-item .picture img{
@@ -1983,6 +1982,83 @@ Looking Details
 }
 
 .my-listings .list-item .bubble i{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translateY(-50%) translateX(-50%);
+  -ms-transform: translateY(-50%) translateX(-50%);
+  -webkit-transform: translateY(-50%) translateX(-50%);
+  color: #fff;
+}
+
+/* My Listings - Profile */
+
+.my-profile .my-listings .list-item .picture{
+  border-radius: 3px;
+  width: 100%;
+  overflow: hidden;
+}
+.my-profile .my-listings .list-item .picture img{
+  width: 100%;
+  position: relative;
+  top: -20px;
+}
+
+.my-profile .my-listings .list-item .infoP span{
+  display: block;
+  color: #000;
+  font-weight: bold;
+  font-size: 1.2em;
+}
+
+.my-profile .my-listings .list-item .infoP .value{
+  font-size: 1.3em;
+  width: 90%;
+  padding-bottom: 3px;
+  border-bottom: 2px solid #f7953d;
+  margin-bottom: 5px;
+}
+
+.my-profile .my-listings .list-item .infoP .address{
+  font-size: 1.1em;
+}
+
+.my-profile .my-listings .list-item .infoP .elapsed-time{
+  font-size: .9em;
+  color: #ccc;
+}
+
+.my-profile .my-listings .list-item .edit {
+  width: 100px;
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  display: table;
+}
+
+.my-profile .my-listings .list-item .edit a, .my-listings .list-item .edit span {
+  display: table-cell;
+  vertical-align: middle;
+}
+.my-profile .my-listings .list-item .edit span {
+  padding-right: 10px;
+  font-weight: bold;
+  color: #f7953d;
+}
+
+.my-profile .my-listings .list-item span.text{
+  display: inline-block;
+}
+.my-profile .my-listings .list-item a.bubble{
+  display: inline-block;
+  position: relative;
+  background: #f7953d;
+  border-radius: 50%;
+  width: 2em;
+  height: 2em;
+}
+
+.my-profile .my-listings .list-item .bubble i{
   position: absolute;
   top: 50%;
   left: 50%;
